--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 /* GLOBAL CSS */
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap');
 
-/* @media (min-width: 900px) {
-    
-} */
-
 *{
     box-sizing: border-box;
     font-family: 'Exo', sans-serif;
